re-implement with a viewpager so as to use the default animation and swiping gestures

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,10 +13,10 @@
 		  android:textSize="35sp"
 		  android:background="@color/titleBackgroundColor" />
 
-     <com.loopj.android.image.SmartImageView
-        android:id="@+id/beatles"
+     <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_launcher" />
+        android:orientation="horizontal" />
         
 </LinearLayout>
